Fixed alignment issue

--- a/digiteens/src/css/AboutUs.css
+++ b/digiteens/src/css/AboutUs.css
@@ -4,9 +4,6 @@
   -moz-user-select: none;
   -khtml-user-select: none;
   -webkit-user-select: none;
-  text-align: left;
-  font-family: "Amiko";
-  font-style: normal;
   /*
    Introduced in Internet Explorer 10.
    See http://ie.microsoft.com/testdrive/HTML5/msUserSelect/
